# project-nexus

./: .gitignore  .mise.toml  DEPLOYMENT.md  README.md  deploy.sh  pyproject.toml  run_all_tests.sh  template.yaml
events/: event.json
frontend/: copy-api-specs.sh  generate-api.sh  install-dependencies.sh  orval.config.js  orval.tsconfig.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
nexus/: __init__.py  cli.py  deployment.py  models.py  services.py
nexus/functions/: __init__.py
nexus/functions/hello_world/: __init__.py  app.py
services/: README.md
services/accounts/: template.yaml
services/accounts/api/: accounts.openapi.yaml
services/accounts/functions/: __init__.py
services/api/: template.yaml
services/api/functions/: __init__.py
services/api_docs/: openapi.yaml  template.yaml
services/auth/: template.yaml
services/auth/functions/: __init__.py
services/comments/: template.yaml
services/comments/api/: comments.openapi.yaml
services/tasks/: README.md  requirements-test.txt  run_tests.sh  template.yaml
services/tasks/api/: tasks.openapi.yaml
services/tasks/tests/: conftest.py  test_assign_task.py  test_create_task.py  test_delete_task.py  test_get_task.py  test_list_tasks.py  test_task_models.py  test_update_task.py  (+1 more)
services/time_tracking/: template.yaml
services/user_roles/: template.yaml
services/workspaces/: README.md  requirements-dev.txt  run_tests.sh  template.yaml
tests/: __init__.py  conftest.py  test_models.py  test_services.py
tests/functions/: __init__.py  test_hello_world.py
(+55 files in other folders)
